syntax = "proto3";

package menuCategory;

message Empty {}

message MenuCategory {
  string id = 1;
  string language = 2;
  string title = 3;
  string description = 4;
  string image = 5;
  bool hidden = 6;
  int32 position = 7;
}
message MenuCategoryWithMenuItems {
  string id = 1;
  string language = 2;
  string title = 3;
  string description = 4;
  string image = 5;
  bool hidden = 6;
  int32 position = 7;
  repeated MenuItem menuItems = 8;
}
message MenuItem {
  string id = 1;
  string language = 2;
  string title = 3;
  string description = 4;
  string price = 5;
  bool hidden = 6;
  int32 position = 7;
}
message MenuCategoryList {
  repeated MenuCategoryWithMenuItems menuCategoryList = 1;
}

message Language {
  string language = 1;
}
message Id {
  string id = 1;
}
message CreateMenuCategoryRequest {
  string language = 1;
  string title = 2;
  string description = 3;
  optional string image = 4;
  optional bool hidden = 5;
  int32 position = 6;
}
message UpdateMenuCategoryRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional string image = 4;
  optional bool hidden = 5;
  optional int32 position = 6;
}
message ChangeMenuCategoryPositionRequest {
  string id = 1;
  int32 oldPosition = 2;
  int32 newPosition = 3;
}
message StatusResponse {
  bool status = 1;
  string message = 2;
}

service MenuCategoryService {
  rpc GetMenuCategoriesByLanguage(Language) returns (MenuCategoryList) {}
  rpc GetAllMenuCategories(Empty) returns (MenuCategoryList) {}
  rpc GetMenuCategoryById(Id) returns (MenuCategoryWithMenuItems) {}
  rpc CreateMenuCategory(CreateMenuCategoryRequest) returns (MenuCategory) {}
  rpc UpdateMenuCategory(UpdateMenuCategoryRequest) returns (MenuCategory) {}
  rpc ChangeMenuCategoryPosition(ChangeMenuCategoryPositionRequest) returns (MenuCategory) {}
  rpc DeleteMenuCategory(Id) returns (StatusResponse) {}
}

// protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./ --ts_proto_opt=nestJs=true ./proto/menu-category.proto